# timer-for-harvest

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.debian-buster  Dockerfile.ubuntu-focal  Dockerfile.ubuntu-groovy  LICENSE  README.md  build-artifacts.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  test.yml
.rpm/: timer-for-harvest.spec
assets/: timer-for-harvest.desktop
debian/: postinst
src/: app.rs  background.rs  lib.rs  main.rs  popup.rs  ui.rs
tests/: lib.rs
