[package]
name = "timer-for-harvest"
description = "Timer for Harvest"
homepage = "https://github.com/frenkel/timer-for-harvest"
version = "0.1.9"
authors = ["Frank Groeneveld <frank@frankgroeneveld.nl>"]
edition = "2018"
readme = "README.md"
license = "BSD 2-Clause License"

[package.metadata.deb]
extended-description = "Harvest client implemented using GTK+ and Rust."
license-file = ["LICENSE", "3"]
assets = [
    ["target/release/timer-for-harvest", "usr/bin/", "755"],
    ["assets/timer-for-harvest.desktop", "usr/share/applications/", "644"],
]

[dependencies]
reqwest = "0.9.18"
serde = "1.0.99"
serde_json = "1.0.40"
chrono = "0.4.9"
glib-sys = "0.9.1"
hyper = "0.12.30"
dirs = "2.0.2"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_22"]

[dependencies.gdk]
version = "0.11.0"
features = ["v3_22"]

[dependencies.gio]
version = "0.7.0"
features = ["v2_44"]

[dependencies.glib]
version = "0.8.0"
features = ["v2_44"]
