[package]
name = "timer-for-harvest"
description = "Timer for Harvest"
homepage = "https://github.com/frenkel/timer-for-harvest"
version = "0.3.8"
authors = ["Frank Groeneveld <frank@frankgroeneveld.nl>"]
edition = "2018"
readme = "README.md"
license = "BSD-2-Clause"

[package.metadata.deb]
extended-description = "Harvest client implemented using GTK+ and Rust."
license-file = ["LICENSE", "3"]
assets = [
    ["target/release/timer-for-harvest", "usr/bin/", "755"],
    ["assets/timer-for-harvest.desktop", "usr/share/applications/", "644"],
]
depends = "libgtk-3-0, libssl1.1, desktop-file-utils"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
timer-for-harvest = { path = "/usr/bin/timer-for-harvest" }

[package.metadata.rpm.files]
"../assets/timer-for-harvest.desktop" = { path = "/usr/share/applications/timer-for-harvest.desktop" }

[dependencies]
# openssl explicitly for OpenSSL 3.0+ support
openssl-sys = "0.9.74"
openssl = "0.10.40"

reqwest = "0.9.18"
serde = "1.0.99"
serde_json = "1.0.40"
chrono = "0.4.9"
glib-sys = "0.9.1"
hyper = "0.14.10"
dirs = "2.0.2"
resolv = { git = "https://github.com/mikedilger/resolv-rs", rev = "bedfffc7c0ebf0790ef72be453e86c7744ae4e3a" }
version-compare = "0.0.10"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_22"]

[dependencies.gdk]
version = "0.11.0"
features = ["v3_22"]

[dependencies.gio]
version = "0.7.0"
features = ["v2_44"]

[dependencies.glib]
version = "0.8.0"
features = ["v2_44"]
